--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -18,6 +18,10 @@ ul {
     list-style-type: square;
 }
 
-ol li:nth-child(odd) {
+ul li:nth-child(odd) {
     background-color: greenyellow;
+}
+
+nav ul {
+    list-style-type: none;
 }
