--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -1,6 +1,19 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.6;
-    color: orange;
+    color: rgb(21, 22, 22);
     background-color: #aad4cf;
+}
+
+.wrapper {
+    padding: 2rem 0;
+}
+
+.container {
+    width: min(960px, 92vw);
+    margin: 0 auto;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 6px 24px rgb(0,0,0,.08);
+    overflow: hidden;
 }
