--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -77,7 +77,8 @@ nav a {
 main {
     padding: 1.25rem 1.5rem 2rem;
 }
-
+/* float makes image moves and then we can adjust the size of this adjustment */
+/* margin helps the text do not be too close to the image */
 .story-image {
     float: left;
     width: min(220px, 40%);
