--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -47,3 +47,10 @@ table {
 	border-spacing: 0;
 }
 
+body{
+    margin: 2px;
+    font-family: "Open Sans", sans-serif;
+    background-color: white;
+    color: #222;
+}
+
