--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -92,3 +92,16 @@ nav a{
     text-decoration: none;
     font-weight: 500;
 }
+
+nav input[type="search"]{
+    background-color: white;
+    padding: 0.3rem 0.2rem;
+    border: 1px solid #b4b4b4cc;
+}
+
+nav .material-symbols-outlined{
+    background-color: #222;
+    color: #c78c06;
+    border: 1px solid #c78c06;
+    padding: 0.3rem 0.2rem;
+}
