--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -28,143 +28,117 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-/* above that was a css reset */
 
-/* styling css layout*/
+/* Personal reminds to understand step by step in my head */
+
+/* In body we adjust the font of the whole page */
 body{
-    margin: 2px;
-    font-family: "Open Sans", sans-serif;
-    background-color: white;
-    color: #222;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/* Doing header which is the top of the page and the header has to be full of dark background */
 header{
-    background-color: #c78c06;
-    color: white;
+    background-color: #222;
+    padding: 0;
 }
 
+/* After I'll add some details such as the golden part from the Logo to Home word */
 .site-header{
-    background-color: #c78c06;
-    color: #222;
-    padding: 0.5rem 1rem;
+    background-color: #222;
+    padding: 16px;
 }
 
+/* Logo size */
 .site-header img{
-    width: 80px;
-    height: auto;
+    width: 100px; 
 }
 
+/* Starting the menu of navigation: home, about, etc... */
 nav{
     background-color: #222;
-    color: #c78c06;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem 1rem;
-    gap: 1rem;
+    /* width: 100%; */
+    padding: 0 0 24px;
+    margin: 0;
 }
 
 nav ul{
     display: flex;
-    gap: 1.5rem;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    gap: 0; 
+    /* gap 0 removes the space between the words (home, about us, services, team, contact */
+    list-style: none;
+    /* list style removes the bullet point from unordered lists */
 }
 
 nav a{
-    color: #c78c06;
+    font-weight: 400;
     text-decoration: none;
-    font-weight: 500;
 }
 
-/* searchbar container */
-nav .searchbar{
+/* 1st item: Home (full gold bar) */
+nav ul li:first-child{
+    width: 100%;
+    background-color: #c78c06;
+    text-align: center;
+    padding: 16px 0;
+    margin-top: 0;
+    border-top: none;
+}
+
+nav ul li:first-child a{
+    background-color: #c78c06;
+    color: #222;
+    display: inline-block;
+}
+
+/* "not(:first-child)" means every child except the fisrt one */
+/* Changing the features and colours for the other words */
+nav ul li:not(:first-child){
+    padding: 16px 0;
+}
+
+nav ul li:not(:first-child) a{
+    color: #c78c06;
+}
+
+/* Going to Search Bar */
+/* .site-search is the class of the whole section */
+.site-search{
     display: flex;
-    align-items: stretch;
+    margin: 0;
+    /* fix this padding because the space in the botton is not this big */
+    padding: 0 16px 0;
 }
 
-/* search field */
-nav input[type="search"]{
+/* Doing Search Input = Search Bar properly */
+.site-search input[type="search"]{
     flex: 1;
-    background-color: white;
-    padding: 0.3rem 0.2rem;
-    border: 1px solid #bbb;
-    font-size: 16px;
+    padding: 8px;
+    border: 1.5px solid #ccc;
+    border-radius: 3px;
+    font-size: 1rem;
 }
 
-/* button icon */
-nav .search-icon{
+/* Doing the Search Button = the icon but just the box arround the icon */
+.site-search button{
+    border: 1.5px solid #c78c06;
     background-color: #222;
-    border: 1px solid #c78c06;
-    padding: 0.3rem 0.6rem;
+    padding: 0 5px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-nav .search-icon .material-symbols-outlined{
+/* Now I'm doing the icon properly */
+/* material-symbols-outlined is the class name for the icons in general and the reasons why that I can change just the search icon is because I identifyed first where this class is, which is inside the .site-search class */
+.site-search .material-symbols-outlined{
     color: #c78c06;
-    font-size: 20px;
+    font-size: 1.6rem;
 }
 
-#welcome{
-    position: relative;
-}
-
-#welcome img{
-    width: 100%;
-    height: auto;
-}
-
-.titletext{
-    position: absolute;
-    top: 50%;
-    left: 5%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.8);
-    color: white;
-    padding: 1.5rem;
-    max-width: 100%;
-}
-
-h1{
-    font-size: 40px;
-    font-weight: bold;
-}
-
-#welcome p{
-    font-size: 10px;
-    margin-top: 1.5rem;
-    margin-bottom: 1rem;
-    line-height: 1.5;
-}
-
-.buttonarrow{
-    background-color: #c78c06;
-    color: #222;
-    text-decoration: none;
-    padding: 1rem 0.5rem;
-    display: inline-flex;
-    align-items: center;
-    gap: 8px;
-}
-
-.buttonarrow .material-symbols-outlined{
-    font-size: 30px;
-}
+/* Now I'm moving on to the next part, which is when starts the 1st image */
+/* Welcome Section */
+ 
