--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -543,3 +543,22 @@ nav ul li:not(:first-child) a{
     color: black;
     text-align: left;
 }
+
+/* Location part */
+#location{
+    background-color: white;
+    padding: 24px 16px 32px;
+    margin: 0;
+}
+
+#location h3{
+    font-size: 1.6rem;
+    font-weight: 700;
+    color: black;
+    margin-bottom: 16px;
+}
+
+#location iframe{
+    width: 100%;
+    display: block;
+}
