media query for about us

--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -615,7 +615,7 @@ footer a:hover{
 
     nav{
         background-color: transparent;
-        padding: 0;
+        padding: 16px;
         display: flex;
         align-items: center;
         flex: 1;
@@ -641,7 +641,7 @@ footer a:hover{
     }
 
     .site-search{
-        padding: 0;
+        padding: 16px;
         margin-left: auto;
         max-width: 320px;
     }
@@ -675,4 +675,24 @@ footer a:hover{
         font-size: 4rem;
         line-height: 1.5;
     }
+
+    /* About Us part */
+    #about{
+        background-color: #ffe6ac;
+        max-width: 1200px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 20px;
+        /* padding: 40px 100px 30px; */
+    }
+
+    #about .about-image img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+    }
+    
+    
 }
