--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -693,6 +693,55 @@ footer a:hover{
         object-fit: cover;
         display: block;
     }
-    
-    
+
+    #services {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 5px 15px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 40px 20px;
+  }
+
+  #services h2{
+    font-size: 2.6rem;
+    white-space: nowrap;
+  }
+
+  #services article {
+    background-color: #ffe6ac;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* height: 100%;
+    min-height: 480px; */
+  }
+
+  #services article img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    display: block;
+  }
+
+  /* Columns for the tamplate (Digital + Marketing) under the others */
+    .service1{
+    grid-column: 1 / span 3;
+  }
+
+  .service2{
+    grid-column: 4 / span 3;
+  }
+
+  .service3{
+   grid-column: 1 / span 2;
+  }
+
+  .service4{
+    grid-column: 3 / span 2;
+  }
+
+  .service5{
+    grid-column: 5 / span 2;
+  }
 }
