--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -694,6 +694,7 @@ footer a:hover{
         display: block;
     }
 
+    /* Our Services part */
     #services {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -743,5 +744,53 @@ footer a:hover{
 
   .service5{
     grid-column: 5 / span 2;
+  }
+
+  /* Starting Our Team part */
+  #team{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .team-member1,
+  .team-member2{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: stretch;
+    height: 400px;
+    margin: 0;
+  }
+
+  .team-member1 img{
+    grid-column: 1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+
+  .member1-content{
+    grid-column: 2;
+    background-color: #ffe6ac;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .team-member2 img{
+    grid-column: 2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+
+  .member2-content{
+    grid-row: 1;
   }
 }
